# electronic-to-agentic-ai

./: .gitignore  .pre-commit-config.yaml  README.md
.github/workflows/: ci.yml
math-foundations/: README.md
month-01-python/: README.md
month-01-python/project-sensor-analyzer/: README.md  pyproject.toml
month-01-python/project-sensor-analyzer/src/sensor_analyzer/: __init__.py  stats.py
month-01-python/project-sensor-analyzer/tests/: test_stats.py
month-02-ml-dl/: README.md
month-03-nlp-llm/: README.md
month-04-rag/: README.md
month-05-agents/: README.md
month-05-agents/patterns/: README.md
month-05-agents/project-design-crew/: README.md
month-06-capstone/embedai-copilot/: README.md
