[project]
name = "sensor-analyzer"
version = "0.1.0"
description = "Cleaning, anomaly detection, and reporting for multi-channel electronic sensor telemetry (Module 1 deliverable)"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "numpy>=1.26",
    "pandas>=2.2",
    "matplotlib>=3.8",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "mypy>=1.11",
    "ruff>=0.8",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/sensor_analyzer"]

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "N", "D", "RUF"]

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["D"]

[tool.mypy]
# python_version intentionally unpinned: numpy >= 2.5 stubs use PEP 695 `type`
# statements, which require analysis under a >= 3.12 grammar. mypy follows the
# uv-managed interpreter.
files = ["src"]
strict = true
warn_unreachable = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=sensor_analyzer --cov-report=term-missing --cov-fail-under=80"
